k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  namespace: upphandling
spec:
  ports:
  - port: 3000
  type: LoadBalancer
  selector:
    app: landing-page
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: upphandling
spec:
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page
        image: landing-page
        ports:
        - containerPort: 3000
