k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page
  namespace: upphandling
  annotations:
    kubernetes.io/ingress.class: 'public'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/http2-push-preload: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '500m'
    nginx.ingress.kubernetes.io/proxy-pass-headers: 'Location'

spec:
  tls:
    - hosts:
        - upphandling.app
      secretName: landing-page-secret-tls
  rules:
    - host: upphandling.app
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: landing-page
                port:
                  number: 3000
