k8s/redirect-old-domain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect
  namespace: happylou
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($host = 'upphandling.app') {
        return 301 https://happylou.se;
      }
    external-dns.alpha.kubernetes.io/hostname: upphandling.app.
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'

spec:
  tls:
    - hosts:
        - upphandling.app
      secretName: upphandling-landing-page-tls
  rules:
    - host: upphandling.app
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: landing-page
                port:
                  number: 3000
